[package]
name = "tui-windows"
description = "tui abstraction to handle multiple windows and their rendering"
version = "0.1.0"
authors = ["MarkAtk"]
edition = "2018"
license = "MIT"
keywords = ["tui", "windows"]
repository = "https://github.com/markatk/tui-windows-rs.git"
readme = "README.md"

[dependencies]
tui = "0.8.0"

[dev-dependencies]
crossterm = "0.14.2"
termion = "1.5.4"

[dev-dependencies.tui]
version = "0.8.0"
features = ["crossterm", "termion"]

[[example]]
name = "termion"

[[example]]
name = "crossterm"
