[package]
name = "tui-windows"
description = "tui abstraction to handle multiple windows and their rendering"
version = "0.1.0"
authors = ["MarkAtk"]
edition = "2018"
license = "MIT"
keywords = ["tui", "windows"]
repository = "https://github.com/markatk/tui-windows-rs.git"
readme = "README.md"

[features]
default = ["termion-backend"]
termion-backend = ["tui/termion", "termion"]
crossterm-backend = ["tui/crossterm", "crossterm"]

[dependencies]
tui = "0.8.0"
termion = { version = "1.5.4", optional = true }
crossterm = { version = "0.14.2", optional = true }

[[example]]
name = "termion"
required-features = ["termion-backend"]

[[example]]
name = "crossterm"
required-features = ["crossterm-backend"]

[[example]]
name = "generic"
required-features = ["crossterm-backend"]
